--- a/style.css
+++ b/style.css
@@ -713,6 +713,9 @@ textarea {
 .search-input-wrapper {
    position: relative;
    margin-bottom: 10px;
+   max-width: 400px;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 .search-input-wrapper input {
